[project]
name = "proj-1"
version = "0.1.0"
description = ""
authors = [
    {name = "phongluong8901",email = "phongluong3366@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "langchain (>=1.2.18,<2.0.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "langgraph (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
